--- a/Server/web-site/package.json
+++ b/Server/web-site/package.json
@@ -19,7 +19,9 @@
     "mongoose": "5.2.8",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "node-fetch": "^2.3.0",
     "pug": "2.0.0-beta11",
+    "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "shortid": "^2.2.13",
     "underscore": "^1.9.1"
