--- a/Server/web-site/package.json
+++ b/Server/web-site/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "hashids": "^1.1.4",
     "http-errors": "~1.6.2",
+    "jstoxml": "^1.4.4",
     "lowdb": "^1.0.0",
     "moment": "^2.22.2",
     "mongoose": "5.2.8",
@@ -21,10 +22,10 @@
     "multer": "^1.3.1",
     "node-fetch": "^2.3.0",
     "pug": "2.0.0-beta11",
-    "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "shortid": "^2.2.13",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "browser-sync": "^2.24.6",
