API 清理無用 Package

--- a/Server/docker-compose.yml
+++ b/Server/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 services:
   web:
     image: docker-node-express-mongoapp
+    restart: always
     container_name: node
     build: ./web-site
     command: npm start
