--- a/Server/web-site/package.json
+++ b/Server/web-site/package.json
@@ -11,8 +11,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "external-ip": "^2.1.1",
     "hashids": "^1.1.4",
     "http-errors": "~1.6.2",
+    "ip": "^1.1.5",
     "jstoxml": "^1.4.4",
     "moment": "^2.22.2",
     "mongoose": "5.2.8",
