--- a/Server/web-site/package.json
+++ b/Server/web-site/package.json
@@ -20,6 +20,7 @@
     "mongoose": "5.2.8",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "natives": "^1.1.6",
     "node-fetch": "^2.3.0",
     "pug": "2.0.0-beta11",
     "underscore": "^1.9.1",
